tests/valid/function/generic_bound_and_outlives.facet
trait Show;

fn keep_ref<'a, 'b, T>(
  r: unrestricted &'a unrestricted isize,
  x: affine T
) -> unrestricted &'b unrestricted isize where 'a: 'b, T: Show {
  r
}

