tests/invalid/trait/bound_lifetime_arg.facet
trait Show;

struct Box<'a, T> where T: Show<'a> {
  value: affine T
}

fn main() -> unrestricted () {
  ()
}
